# dundie-rewards

./: .gitignore  MANIFEST.in  Makefile  README.md  alembic.ini  conftest.py  mkdocs.yml  pyproject.toml  requirements.dev.txt  requirements.test.txt  requirements.txt  setup.py
.github/: copilot-instructions.md
.github/workflows/: main.yml
assets/: bad.csv  database.db  database.json  employees.csv  sample_database.json
docs/: contributing.md  index.md  install.md  usage.md
dundie/: __main__.py  cli.py  core.py  database.py  models.py  settings.py
dundie/utils/: authentication.py  db.py  email.py  exchange.py  log.py  user.py
integration/: __init__.py  conftest.py  constants.py  test_load.py  test_show.py  test_update.py
migrations/: env.py
migrations/versions/: 1fd825cb0401_add_currency_field_to_employee_table.py  29e650e071c8_hash_passwords.py  f666ce77de75_initial_database_migration_revision.py
tests/: __init__.py  conftest.py  constants.py  test_database.py  test_exchange.py  test_load.py  test_read.py  test_update.py  test_utils.py
tests/assets/: employees.csv
