[project]
name = "dundie-victor"
description = "Dunder Mifflin Rewards System"
authors = [
    {name = "Victor Miranda", email = "victor@dundermifflin.com"}
]
requires-python = ">=3.10"
license-files = ["LICENSE"]
dynamic = ["version", "readme", "dependencies", "optional-dependencies"]

[project.urls]
Homepage = "https://dundermifflin.com"
Source = "https://github.com/VictorMirandaEE/dundie-rewards"

[project.scripts]
dundie = "dundie.__main__:main"

[build-system]
requires = ["setuptools", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dundie"]

[tool.setuptools.dynamic]
readme = {file = "README.md"}
dependencies = {file = "requirements.txt"}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = "requirements.dev.txt"}
test = {file = "requirements.test.txt"}

[tool.setuptools_scm]
write_to = "dundie/VERSION.txt"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -vv"
testpaths = ["tests", "integration"]

[tool.flake8]
exclude = [".venv", "build", ".vscodelocal", "migrations"]
max-line-length = 79
# extend-ignore = "E701,"

[tool.black]
line-length = 79
target-version = ["py313"]
exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | _build
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
src_paths = ["dundie", "tests", "integration"]
multi_line_output = 3  # Vertical Hanging Indent
line_length = 79
force_grid_wrap = 0
use_parentheses = true
include_trailing_comma = true
